# rod

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  bun-env.d.ts  package.json
.github/workflows/: compile.yml  publish.yml  rust.yml
.husky/: pre-commit
scripts/: update-version.ts
src-playground/: index.ts
src-rs/: lib.rs
src-ts/: ffi.ts  index.ts  types.ts
src-ts/classes/: eventloop.ts  rod.ts  tray.ts  webcontext.ts  webview.ts  window.ts
src-ts/utilities/: npm.ts  options.ts  strings.ts
